--- a/typographic_hierarchy/index copy.html
+++ b/typographic_hierarchy/index copy.html
@@ -11,7 +11,9 @@
     
   </head>
 
-		<ul class='col-1'>
+  <header>
+  	<nav>
+		<ul class='col-1 fixed'>
 		  <li><a class="active" href=#top>top</a></li>
 		  <li><a href="#Preface">Preface</a></li>
 		  <li><a href="#One">One</a></li>
@@ -31,6 +33,34 @@
 		  <li><a href="#Fifteen">Fifteen</a></li>
 		  <li><a href="#Epilogue">Epilogue</a></li>
 		</ul>
+
+		<div class="relative">
+			<button class="absolute toggle">
+	                <span></span>
+	                <span></span>
+	                <span></span>
+	        </button>
+	    </div>
+    </nav>
+  </header>
+
+   <script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
+		<script>
+		$('button.toggle').click(function() {
+		$('header ul').slideToggle();
+		});
+
+		$(window).resize(function() {
+		ww = $(window).width();
+
+		if (ww > 768) {
+		  $('header ul').show();
+		} else {
+		  $('header ul').hide();
+		};
+
+		});
+  </script>
 
 
     <!-- https://www.marxists.org/reference/subject/philosophy/works/ge/benjamin.htm -->
